<resources>
    <string name="app_name">Activities</string>
    <string name="dostepneAktywnosci">Available activities</string>
    <string name="pobierzDane">Input data</string>
    <string name="zadzwon">Call</string>
    <string name="informacje">About application</string>
    <string name="osoba">Anna Madej</string>
    <string name="kierunek">Applied Informatics</string>
    <string name="uczelnia">Cracov University of Economics</string>
    <string name="ulica">Rakowicka 27</string>
    <string name="telefon">+48121234567</string>
    <string name="email">adres@emailowy.pl</string>
    <string name="miasto">31-510 Kraków</string>
    <string name="opisObrazka">UEKLogo</string>
    <string name="strona">WWW</string>
    <string name="podajImie">Type in  your name</string>
    <string name="ok">OK</string>
    <string name="witaj">Welcome</string>
    <string name="podajMiasto">city</string>
    <string name="podajAdres">address</string>
    <string name="podajKod">postal code</string>
    <string name="podajEmail">e-mail</string>
</resources>
