<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="30dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/podajImie"
        android:id="@+id/imieEditText"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/adresEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/podajAdres"
        android:inputType="textPostalAddress"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/kodEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/podajKod"
            android:layout_weight="2"
            />

        <EditText
            android:id="@+id/miastoEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/podajMiasto"
            android:layout_weight="3"
            android:inputType="textCapWords"/>
    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:onClick="powitaj"/>






</LinearLayout>
